--- a/second-app/style/basic/table.css
+++ b/second-app/style/basic/table.css
@@ -60,13 +60,13 @@ table th, td {
         /* background-color: #019160;   */
     }
 
-    table tr:hover{
+    /* table tr:hover{
         cursor: pointer;
         background-color: #e5e5e5;
-    }
-    table tr:active{
+    } */
+    /* table tr:active{
         background-color: #01B075;
-    }
+    } */
 
 /* Table with data================== */
 .data-table{
