--- a/second-app/style/layout/content.css
+++ b/second-app/style/layout/content.css
@@ -21,6 +21,11 @@
             font-weight: bold;
         }
 
+        /* .content .header-content .title:hover{
+            cursor: pointer;
+            color: red;
+        } */
+
         .content .header-content .content-feature{
             position: absolute;
             right: 16px;
